FIX: removed style overlapping the main content

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,8 +6,8 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
+  /* position: absolute;
+  bottom: 0; */
 }
 
 .footer-content {
